test/libhyperion/syntaxTests/nameAndTypeResolution/406_invalid_address_checksum.hyp
contract C {
    function f() pure public {
        address x = Za996f5aadD5ce02161421C6154a876559eAA1C5e561139d8;
        x;
    }
}
// ----
// SyntaxError 9429: (64-105): This looks like an address but has an invalid checksum. Correct checksummed address: "Za996f5AAdD5ce02161421C6154a876559eAA1C5e561139d8".
